--- a/scikit-learn.ipynb
+++ b/scikit-learn.ipynb
@@ -380,9 +380,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0,\n",
-       "       1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1], dtype=int64)"
+       "array([0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1], dtype=int64)"
       ]
      },
      "execution_count": 9,
@@ -403,17 +403,17 @@
     {
      "data": {
       "text/plain": [
-       "60     1\n",
-       "195    0\n",
-       "144    1\n",
-       "291    0\n",
-       "213    0\n",
+       "294    0\n",
+       "136    1\n",
+       "91     1\n",
+       "129    1\n",
+       "219    0\n",
        "      ..\n",
-       "256    0\n",
-       "231    0\n",
-       "253    0\n",
-       "121    1\n",
-       "22     1\n",
+       "273    0\n",
+       "117    1\n",
+       "302    0\n",
+       "169    0\n",
+       "14     1\n",
        "Name: target, Length: 61, dtype: int64"
       ]
      },
@@ -456,7 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9180327868852459"
+       "0.7704918032786885"
       ]
      },
      "execution_count": 12,
@@ -489,31 +489,31 @@
      "output_type": "stream",
      "text": [
       "Trying model with 10 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "\n",
       "Trying model with 20 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "\n",
       "Trying model with 30 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "\n",
       "Trying model with 40 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.8032786885245902\n",
       "\n",
       "Trying model with 50 estimators...\n",
-      "Model accruacy on test set: 0.9016393442622951\n",
+      "Model accruacy on test set: 0.8032786885245902\n",
       "\n",
       "Trying model with 60 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.7377049180327869\n",
       "\n",
       "Trying model with 70 estimators...\n",
-      "Model accruacy on test set: 0.9180327868852459\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "\n",
       "Trying model with 80 estimators...\n",
-      "Model accruacy on test set: 0.9016393442622951\n",
+      "Model accruacy on test set: 0.8032786885245902\n",
       "\n",
       "Trying model with 90 estimators...\n",
-      "Model accruacy on test set: 0.9016393442622951\n",
+      "Model accruacy on test set: 0.7704918032786885\n",
       "\n"
      ]
     }
@@ -538,39 +538,39 @@
      "output_type": "stream",
      "text": [
       "Trying model with 10 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "Cross-validation score: 78.53551912568305%\n",
       "\n",
       "Trying model with 20 estimators...\n",
-      "Model accruacy on test set: 0.9180327868852459\n",
+      "Model accruacy on test set: 0.7704918032786885\n",
       "Cross-validation score: 79.84699453551912%\n",
       "\n",
       "Trying model with 30 estimators...\n",
-      "Model accruacy on test set: 0.8688524590163934\n",
+      "Model accruacy on test set: 0.7540983606557377\n",
       "Cross-validation score: 80.50819672131148%\n",
       "\n",
       "Trying model with 40 estimators...\n",
-      "Model accruacy on test set: 0.9016393442622951\n",
+      "Model accruacy on test set: 0.7704918032786885\n",
       "Cross-validation score: 82.15300546448088%\n",
       "\n",
       "Trying model with 50 estimators...\n",
-      "Model accruacy on test set: 0.8852459016393442\n",
+      "Model accruacy on test set: 0.8032786885245902\n",
       "Cross-validation score: 81.1639344262295%\n",
       "\n",
       "Trying model with 60 estimators...\n",
-      "Model accruacy on test set: 0.8688524590163934\n",
+      "Model accruacy on test set: 0.7704918032786885\n",
       "Cross-validation score: 83.47540983606557%\n",
       "\n",
       "Trying model with 70 estimators...\n",
-      "Model accruacy on test set: 0.8524590163934426\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "Cross-validation score: 81.83060109289617%\n",
       "\n",
       "Trying model with 80 estimators...\n",
-      "Model accruacy on test set: 0.9016393442622951\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "Cross-validation score: 82.81420765027322%\n",
       "\n",
       "Trying model with 90 estimators...\n",
-      "Model accruacy on test set: 0.9180327868852459\n",
+      "Model accruacy on test set: 0.7868852459016393\n",
       "Cross-validation score: 82.81967213114754%\n",
       "\n"
      ]
@@ -611,7 +611,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9180327868852459"
+       "0.7868852459016393"
       ]
      },
      "execution_count": 17,
@@ -2623,21 +2623,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "16bfee8d",
+   "execution_count": 78,
+   "id": "11c12f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = heart_disease.drop('target',axis = 1)\n",
+    "y = heart_disease['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "04474c3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0.8032786885245902"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2)\n",
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "model.fit(x_train,y_train)\n",
+    "model.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "0c3f7a18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make predictions with ml models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "9febf2b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use a trained model to make prdictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "b3deb6d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2 ways:\n",
+    "#   predict() or predict_proba()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "feb78112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "7afddaac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1,\n",
+       "        1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0,\n",
+       "        1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([y_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "741bfde5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5081967213114754"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_preds = model.predict(X_test)\n",
+    "np.mean(y_preds==y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "84a0e765",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8032786885245902"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "e3848138",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5081967213114754"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_test,y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "df822546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predict_proba()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1f3629f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
