--- a/own_model_test.ipynb
+++ b/own_model_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "[20640 rows x 9 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "0.8065734772187598"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "0.8065734772187598"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,22 +605,490 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9084003051633126"
+       "0.8065734772187598"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.score(x_train,y_train)"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = housing_df.drop('target',axis = 1)\n",
+    "y = housing_df['target']\n",
+    "\n",
+    "x_train,x_test, y_train,y_test = train_test_split(x,y,test_size=0.2)\n",
+    "model = RandomForestRegressor( n_estimators=100)\n",
+    "model.fit(x_train,y_train)\n",
+    "model.score(x_test,y_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8065734772187598"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "x = housing_df.drop(\"target\",axis = 1)\n",
+    "y = housing_df['target']\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2)\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(x_train,y_train)\n",
+    "model.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "y_test_mean = np.full(len(y_test),y_test.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.0550031, 2.0550031, 2.0550031, 2.0550031, 2.0550031, 2.0550031,\n",
+       "       2.0550031, 2.0550031, 2.0550031, 2.0550031])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_mean[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_true=y_test,\n",
+    "         y_pred=y_test_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_true=y_test,\n",
+    "         y_pred=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32659871732073664"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "y_preds = model.predict(x_test)\n",
+    "mea = mean_absolute_error(y_test,y_preds)\n",
+    "mea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual values</th>\n",
+       "      <th>predict values</th>\n",
+       "      <th>razlika</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>0.47700</td>\n",
+       "      <td>0.493840</td>\n",
+       "      <td>0.016840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>0.45800</td>\n",
+       "      <td>0.754940</td>\n",
+       "      <td>0.296940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>5.00001</td>\n",
+       "      <td>4.928596</td>\n",
+       "      <td>-0.071414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>2.18600</td>\n",
+       "      <td>2.543160</td>\n",
+       "      <td>0.357160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>2.78000</td>\n",
+       "      <td>2.331760</td>\n",
+       "      <td>-0.448240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13311</th>\n",
+       "      <td>1.58700</td>\n",
+       "      <td>1.652530</td>\n",
+       "      <td>0.065530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7113</th>\n",
+       "      <td>1.98200</td>\n",
+       "      <td>2.343230</td>\n",
+       "      <td>0.361230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7668</th>\n",
+       "      <td>1.57500</td>\n",
+       "      <td>1.661820</td>\n",
+       "      <td>0.086820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18246</th>\n",
+       "      <td>3.40000</td>\n",
+       "      <td>2.474890</td>\n",
+       "      <td>-0.925110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5723</th>\n",
+       "      <td>4.46600</td>\n",
+       "      <td>4.834478</td>\n",
+       "      <td>0.368478</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual values  predict values   razlika\n",
+       "20046        0.47700        0.493840  0.016840\n",
+       "3024         0.45800        0.754940  0.296940\n",
+       "15663        5.00001        4.928596 -0.071414\n",
+       "20484        2.18600        2.543160  0.357160\n",
+       "9814         2.78000        2.331760 -0.448240\n",
+       "13311        1.58700        1.652530  0.065530\n",
+       "7113         1.98200        2.343230  0.361230\n",
+       "7668         1.57500        1.661820  0.086820\n",
+       "18246        3.40000        2.474890 -0.925110\n",
+       "5723         4.46600        4.834478  0.368478"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data = {'actual values':y_test,'predict values':y_preds})\n",
+    "df['razlika'] = df['predict values'] - df['actual values']\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32659871732073664"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs(df['razlika']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "y_preds = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_test,y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2534678520824551"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['kvadratna razlika'] = np.square(df['razlika'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual values</th>\n",
+       "      <th>predict values</th>\n",
+       "      <th>razlika</th>\n",
+       "      <th>kvadratna razlika</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>0.47700</td>\n",
+       "      <td>0.493840</td>\n",
+       "      <td>0.016840</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>0.45800</td>\n",
+       "      <td>0.754940</td>\n",
+       "      <td>0.296940</td>\n",
+       "      <td>0.088173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>5.00001</td>\n",
+       "      <td>4.928596</td>\n",
+       "      <td>-0.071414</td>\n",
+       "      <td>0.005100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>2.18600</td>\n",
+       "      <td>2.543160</td>\n",
+       "      <td>0.357160</td>\n",
+       "      <td>0.127563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>2.78000</td>\n",
+       "      <td>2.331760</td>\n",
+       "      <td>-0.448240</td>\n",
+       "      <td>0.200919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13311</th>\n",
+       "      <td>1.58700</td>\n",
+       "      <td>1.652530</td>\n",
+       "      <td>0.065530</td>\n",
+       "      <td>0.004294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7113</th>\n",
+       "      <td>1.98200</td>\n",
+       "      <td>2.343230</td>\n",
+       "      <td>0.361230</td>\n",
+       "      <td>0.130487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7668</th>\n",
+       "      <td>1.57500</td>\n",
+       "      <td>1.661820</td>\n",
+       "      <td>0.086820</td>\n",
+       "      <td>0.007538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18246</th>\n",
+       "      <td>3.40000</td>\n",
+       "      <td>2.474890</td>\n",
+       "      <td>-0.925110</td>\n",
+       "      <td>0.855829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5723</th>\n",
+       "      <td>4.46600</td>\n",
+       "      <td>4.834478</td>\n",
+       "      <td>0.368478</td>\n",
+       "      <td>0.135776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual values  predict values   razlika  kvadratna razlika\n",
+       "20046        0.47700        0.493840  0.016840           0.000284\n",
+       "3024         0.45800        0.754940  0.296940           0.088173\n",
+       "15663        5.00001        4.928596 -0.071414           0.005100\n",
+       "20484        2.18600        2.543160  0.357160           0.127563\n",
+       "9814         2.78000        2.331760 -0.448240           0.200919\n",
+       "13311        1.58700        1.652530  0.065530           0.004294\n",
+       "7113         1.98200        2.343230  0.361230           0.130487\n",
+       "7668         1.57500        1.661820  0.086820           0.007538\n",
+       "18246        3.40000        2.474890 -0.925110           0.855829\n",
+       "5723         4.46600        4.834478  0.368478           0.135776"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2534678520824551"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sq = np.square(df['razlika'])\n",
+    "sq.mean()"
    ]
   },
   {
