--- a/own_model_test.ipynb
+++ b/own_model_test.ipynb
@@ -1093,10 +1093,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_large = df\n",
+    "df_large.iloc[1:100] = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_large['razlika'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual values</th>\n",
+       "      <th>predict values</th>\n",
+       "      <th>razlika</th>\n",
+       "      <th>kvadratna razlika</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>0.47700</td>\n",
+       "      <td>0.493840</td>\n",
+       "      <td>0.016840</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15362</th>\n",
+       "      <td>2.63300</td>\n",
+       "      <td>2.220380</td>\n",
+       "      <td>-0.412620</td>\n",
+       "      <td>0.170255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16623</th>\n",
+       "      <td>2.66800</td>\n",
+       "      <td>1.947760</td>\n",
+       "      <td>-0.720240</td>\n",
+       "      <td>0.518746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18086</th>\n",
+       "      <td>5.00001</td>\n",
+       "      <td>4.836378</td>\n",
+       "      <td>-0.163632</td>\n",
+       "      <td>0.026775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2144</th>\n",
+       "      <td>0.72300</td>\n",
+       "      <td>0.717820</td>\n",
+       "      <td>-0.005180</td>\n",
+       "      <td>0.000027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3665</th>\n",
+       "      <td>1.51500</td>\n",
+       "      <td>1.679010</td>\n",
+       "      <td>0.164010</td>\n",
+       "      <td>0.026899</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4128 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual values  predict values    razlika  kvadratna razlika\n",
+       "20046        0.47700        0.493840   0.016840           0.000284\n",
+       "3024        20.00000       20.000000  20.000000          20.000000\n",
+       "15663       20.00000       20.000000  20.000000          20.000000\n",
+       "20484       20.00000       20.000000  20.000000          20.000000\n",
+       "9814        20.00000       20.000000  20.000000          20.000000\n",
+       "...              ...             ...        ...                ...\n",
+       "15362        2.63300        2.220380  -0.412620           0.170255\n",
+       "16623        2.66800        1.947760  -0.720240           0.518746\n",
+       "18086        5.00001        4.836378  -0.163632           0.026775\n",
+       "2144         0.72300        0.717820  -0.005180           0.000027\n",
+       "3665         1.51500        1.679010   0.164010           0.026899\n",
+       "\n",
+       "[4128 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_large"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7295421709146245"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_large['kvadratna razlika'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "x = he"
+   ]
   }
  ],
  "metadata": {
